# Comfyui-Nanobanana-API

./: .gitignore  README.md  __init__.py  config.py.example  nanobanana_node.py  pyproject.toml  ref.md  requirements.txt
.github/workflows/: publish.yml
