[project]
name = "nanobanana-api"
description = "ComfyUI custom node for Gemini image generation via OpenRouter API, supporting text prompts and multiple image inputs (up to 4 images) with automatic saving to output directory. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["openai>=1.0.0", "httpx>=0.24.0", "Pillow>=9.0.0", "torch>=1.9.0", "numpy>=1.21.0", "httpx[socks]"]

[project.urls]
Repository = "https://github.com/Zeknes/Comfyui-Nanobanana-API"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Zeknes/Comfyui-Nanobanana-API/wiki"
"Bug Tracker" = "https://github.com/Zeknes/Comfyui-Nanobanana-API/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui-Nanobanana-API"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

